Added landing login page (front-end)
* Added simple_form to Gemfile

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>AEC</title>
-    <%= csrf_meta_tags %>
-
-    <%= stylesheet_link_tag    'application', media: 'all' %>
-    <%= javascript_include_tag 'application' %>
+    <%= render "header_content" %>
+    <%= render "flashes" %>
     <%= render "application/navigation" %>
   </head>
   <body>
