--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,29 +1,20 @@
-<h2>Sign up</h2>
+<div class="registration border-bottom">
+  <h1 class="text-center bold">AEC</h1>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+  <%= simple_form_for resource, as: resource_name, url: member_registration_path, remote: true do |f| %>
+    <%= f.error_notification %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+    <%= f.input :email, placeholder: 'ejemplo@gmail.com', label: 'Correo electrónico', autofocus: true %>
+    <%= f.input :password, placeholder: 'min. 8 caracteres', label: 'Contraseña' %>
+    <%= f.input :password_confirmation, placeholder: 'confirmación', label: 'Confirmar Contraseña' %>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+    <div class="center-button">
+      <%= f.submit 'Registrarme' %>
+    </div>
+  <% end %>
+</div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+<div class="text-center muted pd-tp-2">
+  ¿Ya tienes cuenta?
+  <%= link_to "Ingresa aquí.", root_path %>
+</div>
