--- a/app/views/application/_navigation.html.erb
+++ b/app/views/application/_navigation.html.erb
@@ -26,9 +26,10 @@
         <a class="nav-link disabled" href="#">Disabled</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    <% if current_member %>
+      <span class="navbar-text bold">
+        <%= button_to "Salir", destroy_member_session_path, method: :delete, class: "btn btn-danger bold", id: "sign_out" %>
+      </span>
+    <% end %>
   </div>
 </nav>
