--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <%= render "header_content" %>
-    <%= render "flashes" %>
+    <%= render "layouts/header_content" %>
     <%= render "application/navigation" %>
+    <%= render "flash" %>
   </head>
-  <body>
+  <%= content_tag :body, data: { action: action_name, controller: controller_name, path: request.path } do %>
     <%= yield %>
-  </body>
+  <% end %>
 </html>
