Added Model Dashboards and Group Attendace
Members can now view each Country, City, Sector, and Group dashboard recursively. And members can now view group and member info and take their attendance

* Added Group details modal
* Added references migration for each model relation
* Add attendance to Member
* Generic dashboard implemented for models with children
* Added MP variables & spacing CSS rules

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,4 +9,4 @@
 @import "components/spacing";
 @import "components/alerts";
 @import "components/icon";
-@import "components/buttons"
+@import "components/buttons";
