--- a/app/assets/stylesheets/components/_spacing.scss
+++ b/app/assets/stylesheets/components/_spacing.scss
@@ -94,3 +94,9 @@
   padding-left: $double-spacing;
   padding-right: $double-spacing;
 }
+
+.px-25 {
+  padding-left: 1.27rem !important;
+  padding-right: 1.27rem !important;
+
+}
