--- a/app/views/groups/_header.html.erb
+++ b/app/views/groups/_header.html.erb
@@ -2,16 +2,16 @@
   <div class="border-right px-3">
     SEDE
   </div>
-  <div class="col border-right">
+  <div class="col-header border-right">
     Nombre
   </div>
-  <div class="col border-right">
+  <div class="col-header border-right">
     Clasificación
   </div>
-  <div class="col border-right">
+  <div class="col-header border-right">
     Estatus
   </div>
-  <div class="col border-right">
+  <div class="col-header border-right">
     Teléfono
   </div>
 </div>
