--- a/app/assets/stylesheets/shared/_helpers.scss
+++ b/app/assets/stylesheets/shared/_helpers.scss
@@ -21,12 +21,15 @@
 
 .login {
   width: 600px;
-  padding: 60px;
+  padding: 0 60px;
   padding-bottom: 20px;
-  margin: 50px auto;
-  margin-bottom: 0;
+  margin: 0 auto;
 }
 
 .registration {
   @extend .login;
+}
+
+.app-flash {
+  padding-bottom: 60px;
 }
