--- a/app/views/countries/index.html.erb
+++ b/app/views/countries/index.html.erb
@@ -1,1 +1,11 @@
+<h1 class="text-center bold">Paises</h1>
+
+<div class="text-center">
+  <%= link_to "Agregar Pais", new_country_path,
+        class: "btn btn-primary bold"
+  %>
+</div>
+
+
 <%= render "application/dashboard", children: @countries %>
+
