--- a/app/views/groups/_attendance_form.html.erb
+++ b/app/views/groups/_attendance_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for current_member, url: attendance_path, wrapper_mappings: { boolean: :inline_boolean } do |f| %>
+<%= simple_form_for current_member, url: attendances_path, wrapper_mappings: { boolean: :inline_boolean } do |f| %>
   <%= f.error_notification %>
 
   <%= render 'header' %>
