--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center pd-tp-3 bold">
+<h1 class="text-center bold">
   <%= @group.name %> -
   <% if @group.active? %>
     <div class="text-success d-inline">ACTIVO</div>
